--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 			<h1>Travify - Your Travel Guide</h1>
 		<p id="tag">Explore The World With Us</p>
 			<div class="input-group">
+		<script>
+   				(function() {
+   				 var cx = '003051885031790762428:jpjwlmptmtw';
+   				 var gcse = document.createElement('script');
+   				 gcse.type = 'text/javascript';
+   				 gcse.async = true;
+   				 gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    				 var s = document.getElementsByTagName('script')[0];
+    				 s.parentNode.insertBefore(gcse, s);
+ 				  })();
+		</script>
+<gcse:search></gcse:search>
 				<input type="text" class="form-control" placeholder="Enter Your Destination">
 				<div class="input-group-append">
 					<button type="submit" class="input-group-text btn">Search</button>
