--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     				 s.parentNode.insertBefore(gcse, s);
  				  })();
 		</script>
-<gcse:search></gcse:search>
+
 				<input type="text" class="form-control" placeholder="Enter Your Destination">
 				<div class="input-group-append">
-					<button type="submit" class="input-group-text btn">Search</button>
+					<gcse:search></<button type="submit" class="input-group-text btn">Search</button>gcse:search>
 				</div>
 			</div>
 
