--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<input type="text" class="form-control" placeholder="Enter Your Destination">
 				<div class="input-group-append">
-					<gcse:search></<button type="submit" class="input-group-text btn">Search</button>gcse:search>
+					<button type="submit" class="input-group-text btn">Search<gcse:search></gcse:search></button>
 				</div>
 			</div>
 
