--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<p id="tag">Explore The World With Us</p>
 			<div class="input-group">
 		<!--- ------                       ---->
-   				(function() {
+   				<script>
+				(function() {
    				 var cx = '003051885031790762428:jpjwlmptmtw';
    				 var gcse = document.createElement('script');
    				 gcse.type = 'text/javascript';
@@ -26,11 +27,12 @@
     				 var s = document.getElementsByTagName('script')[0];
     				 s.parentNode.insertBefore(gcse, s);
  				  })();
+				</script>
 		<!--- ------                       ---->
-
+				<gcse></gcse>
 				<input type="text" class="form-control" placeholder="Enter Your Destination">
 				<div class="input-group-append">
-					<button type="submit" class="input-group-text btn">Search<gcse:search></gcse:search></button>
+					<button type="submit" class="input-group-text btn">Search<search></search></button>
 				</div>
 			</div>
 
