--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     				 s.parentNode.insertBefore(gcse, s);
  				  })();
 				</script>
-		
-				<gcse></gcse>
+				<gcse:search></gcse:search>
+				
 				<input type="text" class="form-control" placeholder="Enter Your Destination">
 				<div class="input-group-append">
-					<button type="submit" class="input-group-text btn">Search<search></search></button>
+					<button type="submit" class="input-group-text btn">Search</button>
 				</div>
 			</div>
 
