--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 		</div>
 			<h1>Travify - Your Travel Guide</h1>
 		<p id="tag">Explore The World With Us</p>
-			<div class="input-group">
-				
-				<input type="text" class="form-control" placeholder="Enter Your Destination">
+			
+		<form action="https://www.google.com/search" method="GET">
+		<div class="input-group">
+				<input type="text" name="q" class="form-control" placeholder="Enter Your Destination">
 				<div class="input-group-append">
 					<button type="submit" class="input-group-text btn">Search</button>
 				</div>
 			</div>
+			</form>
 
 	</section>
 
