--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<h1>Travify - Your Travel Guide</h1>
 		<p id="tag">Explore The World With Us</p>
 			
-		<form action="https://www.google.com/search" method="GET">
+		<form action="https://www.google.com/search" method="GET" target="_blank">
 		<div class="input-group">
 				<input type="text" name="q" class="form-control" placeholder="Enter Your Destination">
 				<div class="input-group-append">
