--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
 		</div><hr>
 
-		<p class="copyright">Made by VKS Enterprises</p>
+		<p class="copyright">&copy Made by VKS Enterprises</p>
 	</div>
 
 </section>
