--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 
 <html>
 <head>
+	
+	<i class="fas fa-plane-departure"></i>
 	<title>Travify</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
