--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 	
-	<i class="fa fa-plane-departure"></i>
+	<i class="fa fa-plane"></i>
 	<title>Travify</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet"  href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<link rel="stylesheet" href="https://fontawesome.com/icons/plane-departure?style=solid">
+	<meta name="viewport" content="width=device-width,initial-scale=1">	<link rel="stylesheet" href="https://fontawesome.com/icons/plane-departure?style=solid">
 </head>
 <body>
 	<section class="header">
