--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Virtual Wardrobe App Privacy Policy</title>
+  <title>Closet App Privacy Policy</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -31,21 +31,21 @@
   </style>
 </head>
 <body>
-  <h1>Privacy Policy for Virtual Wardrobe App</h1>
+  <h1>Privacy Policy for Closet App</h1>
 
-  <p>This Privacy Policy outlines the manner in which Virtual Wardrobe App collects, uses, maintains, and discloses information collected from users (each, a "User") of the Virtual Wardrobe App. This privacy policy applies to the app and all products and services offered by Virtual Wardrobe App.</p>
+  <p>This Privacy Policy outlines the manner in which Closet App collects, uses, maintains, and discloses information collected from users (each, a "User") of the Closet App. This privacy policy applies to the app and all products and services offered by Virtual Wardrobe App.</p>
 
   <h2>Information Collection and Use</h2>
 
-  <p>The Virtual Wardrobe App does not require any personal information to be provided for its basic functionality. However, in certain circumstances, the app may collect non-personal information for the purpose of improving user experience.</p>
+  <p>The Closet App does not require any personal information to be provided for its basic functionality. However, in certain circumstances, the app may collect non-personal information for the purpose of improving user experience.</p>
 
   <h2>Non-Personal Information</h2>
 
-  <p>The Virtual Wardrobe App may collect non-personal information about Users whenever they interact with the app. Non-personal information may include the device's model, operating system version, language preference. This information is collected solely for the purpose of enhancing the app's performance and usability.</p>
+  <p>The Closet App may collect non-personal information about Users whenever they interact with the app. Non-personal information may include the device's model, operating system version, language preference. This information is collected solely for the purpose of enhancing the app's performance and usability.</p>
 
   <h2>Third-Party Services</h2>
 
-  <p>The Virtual Wardrobe App does not integrate with any third-party services or APIs that would require the sharing of user data.</p>
+  <p>The Closet App does not integrate with any third-party services or APIs that would require the sharing of user data.</p>
 
   <h2>Data Security</h2>
 
@@ -53,7 +53,7 @@
 
   <h2>Changes to This Privacy Policy</h2>
 
-  <p>Virtual Wardrobe App has the discretion to update this privacy policy at any time. When we do, we will post a notification on the main page of our app. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.</p>
+  <p>Closet App has the discretion to update this privacy policy at any time. When we do, we will post a notification on the main page of our app. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.</p>
 
   <h2>Your Acceptance of These Terms</h2>
 
@@ -63,7 +63,7 @@
 
   <p>If you have any questions about this Privacy Policy, the practices of this app, or your dealings with this app, please contact us at:</p>
 
-  <p>Virtual Wardrobe App<br>
+  <p>Closet App<br>
   Email: <a href="mailto:contact@omnisoftconsulting.com">contact@omnisoftconsulting.com</a></p>
 
   <p>This document was last updated in Feb 2024.</p>
